# rust-traffic-watch

./: .gitignore  CITATION.cff  Cargo.toml  LICENSE  README.md  configuration.nix  readme.md  rustfmt.toml
.cargo/: config.toml
analyse/: .Rhistory  Final_Softwarepraktikum.qmd  Smoke-Test.qmd  flake.nix  temp.txt  thesis_new_graphs.qmd
analyse/logs/: experiment_Local_yolov5m_JpgLossy_T1_FHD_10fps_3rsu_full_20260117_122241.csv  experiment_Local_yolov5m_JpgLossy_T1_FHD_15fps_3rsu_full_20260117_132559.csv  experiment_Local_yolov5m_JpgLossy_T1_FHD_1fps_3rsu_full_20260117_103245.csv  experiment_Local_yolov5m_JpgLossy_T1_FHD_5fps_3rsu_full_20260117_112611.csv  experiment_Local_yolov5m_JpgLossy_T1_HD_10fps_3rsu_full_20260117_122410.csv  experiment_Local_yolov5m_JpgLossy_T1_HD_10fps_full_20260125_085055.csv  experiment_Local_yolov5m_JpgLossy_T1_HD_15fps_3rsu_full_20260117_132727.csv  experiment_Local_yolov5m_JpgLossy_T1_HD_1fps_3rsu_full_20260117_103414.csv  experiment_Local_yolov5m_JpgLossy_T1_HD_5fps_3rsu_full_20260117_112740.csv  experiment_Local_yolov5m_JpgLossy_T1_Letterbox_10fps_3rsu_full_20260117_122538.csv  experiment_Local_yolov5m_JpgLossy_T1_Letterbox_10fps_full_20260118_160558.csv  experiment_Local_yolov5m_JpgLossy_T1_Letterbox_10fps_full_20260125_085317.csv  experiment_Local_yolov5m_JpgLossy_T1_Letterbox_15fps_3rsu_full_20260117_132856.csv  experiment_Local_yolov5m_JpgLossy_T1_Letterbox_15fps_full_20260118_161947.csv  experiment_Local_yolov5m_JpgLossy_T1_Letterbox_1fps_3rsu_full_20260117_103543.csv  experiment_Local_yolov5m_JpgLossy_T1_Letterbox_1fps_full_20260118_153917.csv  experiment_Local_yolov5m_JpgLossy_T1_Letterbox_5fps_3rsu_full_20260117_112910.csv  experiment_Local_yolov5m_JpgLossy_T1_Letterbox_5fps_full_20260118_155238.csv  experiment_Local_yolov5m_JpgLossy_T1_Letterbox_5fps_full_20260125_073715.csv  experiment_Local_yolov5m_JpgLossy_T2_FHD_10fps_3rsu_full_20260117_122707.csv  experiment_Local_yolov5m_JpgLossy_T2_FHD_15fps_3rsu_full_20260117_133025.csv  experiment_Local_yolov5m_JpgLossy_T2_FHD_15fps_full_20260125_103057.csv  experiment_Local_yolov5m_JpgLossy_T2_FHD_1fps_3rsu_full_20260117_103712.csv  experiment_Local_yolov5m_JpgLossy_T2_FHD_5fps_3rsu_full_20260117_113039.csv  experiment_Local_yolov5m_JpgLossy_T2_HD_10fps_3rsu_full_20260117_122836.csv  experiment_Local_yolov5m_JpgLossy_T2_HD_15fps_3rsu_full_20260117_133154.csv  experiment_Local_yolov5m_JpgLossy_T2_HD_15fps_full_20260125_103318.csv  experiment_Local_yolov5m_JpgLossy_T2_HD_1fps_3rsu_full_20260117_103841.csv  experiment_Local_yolov5m_JpgLossy_T2_HD_1fps_full_20260125_063716.csv  experiment_Local_yolov5m_JpgLossy_T2_HD_5fps_3rsu_full_20260117_113208.csv  experiment_Local_yolov5m_JpgLossy_T2_HD_5fps_full_20260125_074159.csv  experiment_Local_yolov5m_JpgLossy_T2_Letterbox_10fps_3rsu_full_20260117_123005.csv  experiment_Local_yolov5m_JpgLossy_T2_Letterbox_10fps_full_20260118_160727.csv  experiment_Local_yolov5m_JpgLossy_T2_Letterbox_10fps_full_20260125_090027.csv  experiment_Local_yolov5m_JpgLossy_T2_Letterbox_15fps_3rsu_full_20260117_133323.csv  experiment_Local_yolov5m_JpgLossy_T2_Letterbox_15fps_full_20260118_162116.csv  experiment_Local_yolov5m_JpgLossy_T2_Letterbox_1fps_3rsu_full_20260117_104010.csv  experiment_Local_yolov5m_JpgLossy_T2_Letterbox_1fps_full_20260118_154046.csv  experiment_Local_yolov5m_JpgLossy_T2_Letterbox_5fps_3rsu_full_20260117_113337.csv  experiment_Local_yolov5m_JpgLossy_T2_Letterbox_5fps_full_20260118_155407.csv  (+1339 more)
analyse/phase1_logs/: experiment_LocalOnly_yolov5m_15fps_20250829_204036.csv  experiment_LocalOnly_yolov5n_1fps_20250829_164700.csv  experiment_LocalOnly_yolov5s_1fps_20250829_181144.csv  experiment_Offload_yolov5n_15fps_20250829_180101.csv  experiment_Offload_yolov5n_1fps_20250829_165730.csv  experiment_Offload_yolov5s_1fps_20250829_182218.csv
controller/: Cargo.toml
controller/src/: main.rs
crates/codec/: Cargo.toml
crates/codec/src/: decoder.rs  (+3 more)
crates/common/: Cargo.toml
crates/inference/: Cargo.toml
crates/inference/src/: engine.rs  experiment_manager.rs  inference_manager.rs  lib.rs  persistent.rs  postprocess.rs  preprocess.rs  utils.rs
crates/network/: Cargo.toml
crates/protocol/: Cargo.toml
docs/: configuration.md  setup.md  usage.md
docs/jupyter/: experiment_LocalOnly_yolov5m_5fps_20250829_195803.csv  experiment_LocalOnly_yolov5s_15fps_20250829_191526.csv  experiment_LocalOnly_yolov5s_5fps_20250829_183300.csv  experiment_Offload_yolov5m_10fps_20250829_202951.csv  experiment_Offload_yolov5m_15fps_20250829_205106.csv  experiment_Offload_yolov5m_1fps_20250829_194715.csv  experiment_Offload_yolov5n_5fps_20250829_171841.csv  experiment_Offload_yolov5s_15fps_20250829_192556.csv  result_evaluation.ipynb
docs/plantuml/: LIM_final.puml  RIM_final.puml
jetson-receiver/: Cargo.toml  export_engines.sh
jetson-receiver/src/: main.rs
models/: yolov5l.onnx  yolov5m.onnx  yolov5n.onnx  yolov5s.onnx  yolov5x.onnx
pi-sender/: Cargo.toml
pi-sender/sample/: placeholder.txt
pi-sender/src/: main.rs
preprocessor/: Cargo.toml
preprocessor/src/: main.rs
python/: inference_pytorch.py  inference_tensorrt.py  inference_with_boxes.py  python_inference.py
roadside-unit/: Cargo.toml
roadside-unit/src/: main.rs
services/controller/: Cargo.toml
services/controller/src/: csv_maker.rs  csv_writer.rs  experiment.rs  main.rs  service.rs
services/roadside-unit/: Cargo.toml
services/roadside-unit/src/: frame_loader.rs  main.rs  protocol_ext.rs  service.rs
services/zone-processor/: Cargo.toml  export_engines.sh  export_onnx.sh
services/zone-processor/src/: main.rs  service.rs
shared/: Cargo.toml
shared/src/: analysis.rs  codec.rs  connection.rs  connection_manager.rs  constants.rs  experiment_manager.rs  lib.rs  network.rs  python_detector.rs  types.rs
tmc-coordinator/src/: main.rs
tools/model-tester/: Cargo.toml
tools/preprocessor/: Cargo.toml
tools/preprocessor/src/: image_processing.rs  main.rs
tools/showcase/: Cargo.toml
tools/showcase/src/: annotate.rs  main.rs  server.rs  state.rs  worker.rs
zone-processor/src/: main.rs
(+387 files in other folders)
