[workspace]
members = ["services/roadside-unit", "services/zone-processor", "services/controller", "shared", "tools/preprocessor", "crates/codec", "crates/inference", "crates/network", "crates/common", "crates/protocol"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0.1"