[workspace]
members = ["services/roadside-unit", "services/zone-processor", "services/controller", "tools/preprocessor", "crates/inference", "crates/network", "crates/protocol", "tools/model-tester"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }