[package]
name = "inference"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = "1.48.0"
tracing = "0.1.41"
shared = { path = "../../shared" }
protocol = { path = "../protocol" }
anyhow = "1"
ort = { version = "2.0.0-rc.10", features = ["ndarray", "copy-dylibs"] }
ndarray = "=0.16.1"
image = "0.25.8"
