[package]
name = "controller"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
shared = { path = "../../shared" }
common = { path = "../../crates/common"}
protocol = { path = "../../crates/protocol"}
network = { path = "../../crates/network"}
codec = { path = "../../crates/codec"}
csv = "1.3"
chrono = "0.4.41"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
