[package]
name = "controller"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
protocol = { path = "../../crates/protocol"}
network = { path = "../../crates/network"}
codec = { path = "../../crates/codec"}
chrono = "0.4.41"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
csv = "1.4.0"
