[package]
name = "roadside-unit"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
protocol = { path = "../../crates/protocol" }
network = { path = "../../crates/network" }
inference = { path = "../../crates/inference" }
log = "0.4.27"
image = "0.25.8"
tracing-subscriber = "0.3.20"
clap = { version = "4.5.54", features = ["derive"] }
