[package]
name = "roadside-unit"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
protocol = { path = "../../crates/protocol" }
network = { path = "../../crates/network" }
inference = { path = "../../crates/inference" }
image = "0.25.8"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
clap = { version = "4.5.54", features = ["derive"] }
tracing = "0.1.43"
