[package]
name = "zone-processor"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
protocol = { path = "../../crates/protocol" }
network = { path = "../../crates/network" }
inference = { path = "../../crates/inference" }
tracing-subscriber = "0.3.20"
tracing = "0.1.43"
