[package]
name = "zone-processor"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
protocol = { path = "../../crates/protocol" }
network = { path = "../../crates/network" }
inference = { path = "../../crates/inference" }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing = "0.1.43"
clap = { version = "4.5.54", features = ["derive"] }
futures = "0.3.31"
anyhow = "1.0.100"
