[package]
name = "preprocessor"
version = "0.1.0"
edition = "2024"

[dependencies]
protocol = { path = "../../crates/protocol" }
image = "0.25.8"
anyhow = "1.0.100"
rayon = "1.11.0"
log = "0.4.28"
mozjpeg = "0.10.13"
webp = "0.3.1"
env_logger = "0.11.8"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"

