[package]
name = "showcase"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
inference = { path = "../../crates/inference" }
protocol = { path = "../../crates/protocol" }
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
image = "0.24.9"
imageproc = "0.23"
rusttype = "0.9"
axum = "0.7"
parking_lot = "0.12"
serde_json = "1"
ort = "2.0.0-rc.10"